# wild_animal_image_classification

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  create_non_empty_csvs.py  delete_empty_class_images.py  dinov2_clustering_analysis.ipynb  dinov2_clustering_analysis.py  dinov2_transfer_learning.ipynb  efficientnet_b4_transfer_learning.ipynb  pyproject.toml  report.md  vit_b16_transfer_learning.ipynb
configs/: config.py
models/dinov2_clustering/: clustering_summary.json  embedding_metadata.csv  kmeans_elbow.csv  pca_embeddings.npy  tsne_embeddings.npy  umap_embeddings.npy
notebook_output_exports/: dinov2_clustering_analysis.html  dinov2_transfer_learning.html  dinov2_transfer_learning_with_lion.html  efficientnet_b4_transfer_learning.html  efficientnet_b4_transfer_learning_with_lion.html  vit_b16_transfer_learning.html  vit_b16_transfer_learning_with_lion.html
notebooks/: 00_setup_and_eda.ipynb  01_efficientnet_b4.ipynb  02_vit_b16.ipynb  03_dinov2_classification.ipynb  04_dinov2_clustering.ipynb  05_comparison.ipynb
utils/: dataset.py  training.py
